test/bad/functions/name03.px

func function() def
    skip

func function() def
    skip
